=corrections to hover bug, due to shade-shift z-index

--- a/resources/assets/sass/_overwrites.scss
+++ b/resources/assets/sass/_overwrites.scss
@@ -67,7 +67,6 @@ h4{
 .navbar-shade-shift{
   position: relative;
   top: -160px;
-  z-index: -1;
 }
 
 .navbar-shade .navbar-right{
