--- a/resources/assets/sass/templates.scss
+++ b/resources/assets/sass/templates.scss
@@ -68,6 +68,7 @@
 #section-bar{
   background: $secondary-bg;
   color: $secondary-text;
+  border: none;
   padding: 10px 30px;
 }
 
